--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: An R package to submit a custom polygon request to the WorldPop API
 Version: 0.1.0
 Author: Maksym Bondarenko
 Maintainer: The package maintainer <mb4@soton.ac.uk>
-Depends: R (>= 3.2.0), rgdal,geojsonio,httr,sf,raster
+Depends: R (>= 3.2.0), rgdal,geojsonio,httr,sf,raster,jsonlite
 Description: An R package to submit a custom polygon request to the WorldPop API.
 License: GPL
 Encoding: UTF-8
