Updates to the package.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,11 @@ export(wpCPRDemographic)
 export(wpCPRGetlog)
 export(wpCPRPopulation)
 export(wpCPRProgressMessage)
+importFrom(geojsonio,geojson_json)
+importFrom(httr,POST)
+importFrom(httr,http_error)
+importFrom(httr,http_type)
+importFrom(httr,modify_url)
+importFrom(jsonlite,fromJSON)
+importFrom(sf,st_read)
+importFrom(utils,write.csv)
