--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,9 +4,15 @@ Title: An R package to submit a custom polygon request to the WorldPop API
 Version: 0.1.0
 Author: Maksym Bondarenko
 Maintainer: The package maintainer <mb4@soton.ac.uk>
-Depends: R (>= 3.2.0), rgdal,geojsonio,httr,sf,raster,jsonlite
+Depends: R (>= 3.2.0) , geojsonio, sf
+Imports:
+    httr,
+    raster,
+    geojsonlint,
+    rgdal,
+    jsonlite
 Description: An R package to submit a custom polygon request to the WorldPop API.
 License: GPL
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.0
